--- a/FinalProjectReport.ipynb
+++ b/FinalProjectReport.ipynb
@@ -439,7 +439,89 @@
    "outputs": [],
    "source": [
     "if False:\n",
-    "    None"
+    "    def generate_spectrogram(input_path, output_path, extract_clips=False):\n",
+    "        try:\n",
+    "            if os.path.exists(output_path):\n",
+    "                print(f\"Spectrogram already exists for {input_path}. Skipping.\")\n",
+    "                return\n",
+    "                \n",
+    "            y, sr = librosa.load(input_path)\n",
+    "\n",
+    "            if len(y) > 90 * sr and extract_clips:\n",
+    "                for i in range(3):\n",
+    "                    start_time = i * 30\n",
+    "                    end_time = start_time + 30\n",
+    "                    y_clip = y[start_time * sr:end_time * sr]\n",
+    "\n",
+    "                    D = librosa.amplitude_to_db(np.abs(librosa.stft(y_clip)), ref=np.max)\n",
+    "\n",
+    "                    plt.figure(figsize=(432/80, 288/80)) \n",
+    "                    librosa.display.specshow(D, sr=sr, x_axis=None, y_axis=None) \n",
+    "                    plt.axis('off')\n",
+    "\n",
+    "                    clip_output_path = os.path.join(\n",
+    "                        os.path.dirname(output_path), f\"{os.path.splitext(os.path.basename(output_path))[0]}_clip{i+1}.png\"\n",
+    "                    )\n",
+    "                    # print(f'clip output path : {clip_output_path}')\n",
+    "                    plt.savefig(clip_output_path, bbox_inches='tight', pad_inches=0, dpi=100)\n",
+    "                    plt.close()\n",
+    "\n",
+    "            else:\n",
+    "                D = librosa.amplitude_to_db(np.abs(librosa.stft(y)), ref=np.max)\n",
+    "\n",
+    "                plt.figure(figsize=(432/80, 288/80)) \n",
+    "                librosa.display.specshow(D, sr=sr, x_axis=None, y_axis=None) \n",
+    "                plt.axis('off')\n",
+    "\n",
+    "                plt.savefig(output_path, bbox_inches='tight', pad_inches=0, dpi=100)\n",
+    "                plt.close()\n",
+    "\n",
+    "        except LibrosaError as e:\n",
+    "            print(f\"Error processing {input_path}: {e}\")\n",
+    "\n",
+    "    def process_folder(input_folder, output_folder, batch_size=50, extract_clips=False):\n",
+    "        for root, dirs, files in os.walk(input_folder):\n",
+    "            relative_path = os.path.relpath(root, input_folder)\n",
+    "            output_subfolder = os.path.join(output_folder, relative_path)\n",
+    "            for i in range(0, len(files), batch_size):\n",
+    "                batch_files = files[i:i + batch_size]\n",
+    "                for file in batch_files:\n",
+    "                    if file.endswith(\".wav\") and not file.startswith(\"._\"):\n",
+    "                        input_path = os.path.join(root, file)\n",
+    "\n",
+    "                        os.makedirs(output_subfolder, exist_ok=True)\n",
+    "\n",
+    "                        output_path = os.path.join(output_subfolder, f\"{os.path.splitext(file)[0]}.png\")\n",
+    "                        generate_spectrogram(input_path, output_path, extract_clips)\n",
+    "                        print(f\"Spectrogram generated for {file}\")\n",
+    "    \n",
+    "    genres_original = os.path.join(os.getcwd(), os.path.join(\"Data\", \"genres_original\"))\n",
+    "    spec_original = os.path.join(os.getcwd(), os.path.join(\"Data\", \"spec_original\"))\n",
+    "    os.makedirs(spec_original, exist_ok=True)\n",
+    "\n",
+    "    process_folder(genres_original, spec_original, batch_size=50, extract_clips=True)\n",
+    "\n",
+    "    def rename_files_with_prefix(directory_path, prefix='jpop'):\n",
+    "    try:\n",
+    "        files = [f for f in os.listdir(directory_path) if os.path.isfile(os.path.join(directory_path, f))]\n",
+    "\n",
+    "        for i, file_name in enumerate(files, start=1):\n",
+    "            new_file_name = f'{prefix}{i:05d}.png'\n",
+    "            \n",
+    "            old_path = os.path.join(directory_path, file_name)\n",
+    "            new_path = os.path.join(directory_path, new_file_name)\n",
+    "\n",
+    "            # Rename the file\n",
+    "            os.rename(old_path, new_path)\n",
+    "            print(f\"Renamed '{file_name}' to '{new_file_name}'\")\n",
+    "\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Directory '{directory_path}' not found.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "    directory_to_rename = os.path.join(spec_original, \"jpop\")\n",
+    "    rename_files_with_prefix(directory_to_rename)"
    ]
   }
  ],
